--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -77,3 +77,17 @@ input[type="range"]::-moz-range-thumb {
     width: 60%;
   }
 }
+
+.footer {
+  position: fixed;
+  left: 0%;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    opacity: 0;
+  }
+}
