--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -10,9 +10,23 @@ h3 {
   color: rgb(54, 54, 54);
 }
 
+html {
+  background: no-repeat center center fixed;
+  background-image: linear-gradient(-225deg, #fffeff 0%, #d7fffe 100%);
+
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
   font-family: "Lato", sans-serif;
-  background-image: linear-gradient(-225deg, #fffeff 0%, #d7fffe 100%);
+  // background-image: linear-gradient(-225deg, #fffeff 0%, #d7fffe 100%);
+  background-size: 100% 100%;
+  height: 100%;
+  // background: red;
+  background-repeat: no-repeat;
 }
 
 h3,
